--- a/src/index.html
+++ b/src/index.html
@@ -4,27 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jean Alves</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/src/styles/main.scss">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-
-    <div class="header">
-        <nav class="header-nav">
-            <h2 class="logo">Jean Alves</h2>
-            <button class="menu-toggle" aria-label="Toggle menu">☰</button>
-            <ul class="cabecalho">
-                <li><a href="#hero">Inicio</a></li>
-                <li><a href="#">Sobre Mim</a></li>
-                <li><a href="#">Serviços</a></li>
-                <li><a href="#">Habilidades</a></li>
-                <li><a href="#">Projetos</a></li>
-                <li><a href="#">Contatos</a></li>
+    <header id="navbar">
+        <nav class="nav-container">
+            <div class="logo">My Portfolio</div>
+            <ul class="nav-links">
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
+            <div class="burger">
+                <div class="line1"></div>
+                <div class="line2"></div>
+                <div class="line3"></div>
+                <div class="close-icon">&times;</div>
+            </div>
         </nav>
-    </div>
+    </header>
 
     <section id="hero" class="hero">
         <div class="home-content">
@@ -34,10 +36,10 @@
             <p class="subtitle">Um ano de experiência no mercado.</p>
             <p class="subtitle">Podemos nos conhecer melhor?</p>
         </div>
-        <img src="./img/sala.jpg" alt="home">
+        <img src="/src/img/fundo.png" alt="home">
     </section>
     
 
-    <script src="scripts.js"></script>
+    <script src="/src/scripts/main.js"></script>
 </body>
 </html>
