--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    <header id="navbar">
+    <!-- <header id="navbar">
         <nav class="nav-container">
             <div class="logo">My Portfolio</div>
             <ul class="nav-links">
@@ -26,17 +26,17 @@
                 <div class="close-icon">&times;</div>
             </div>
         </nav>
-    </header>
+    </header> -->
 
     <section id="hero" class="hero">
-        <div class="home-content">
+        <div class="hero__content">
             <h4>Olá, meu nome é</h4>
             <h2>Jean Pablo Alves Gonçalves</h2>
             <h3>Eu sou um desenvolvedor JavaScript</h3>
-            <p class="subtitle">Um ano de experiência no mercado.</p>
-            <p class="subtitle">Podemos nos conhecer melhor?</p>
+            <p>Um ano de experiência no mercado.</p>
+            <p>Podemos nos conhecer melhor?</p>
         </div>
-        <img src="/src/img/fundo.png" alt="home">
+        <img src="img/sala.jpg" alt="fundo">
     </section>
     
 
