--- a/src/index.html
+++ b/src/index.html
@@ -29,14 +29,16 @@
     </header> -->
 
     <section id="hero" class="hero">
-        <div class="hero__content">
+        <div class="hero__container">
             <h4>Olá, meu nome é</h4>
             <h2>Jean Pablo Alves Gonçalves</h2>
             <h3>Eu sou um desenvolvedor JavaScript</h3>
             <p>Um ano de experiência no mercado.</p>
             <p>Podemos nos conhecer melhor?</p>
         </div>
-        <img src="img/sala.jpg" alt="fundo">
+        <div class="hero__image">
+            <img src="https://via.placeholder.com/250" alt="Jean Pablo Alves Gonçalves">
+        </div>
     </section>
     
 
