--- a/src/index.html
+++ b/src/index.html
@@ -28,10 +28,17 @@
         </nav>
     </header> -->
 
+    <div class="cookie-banner" id="cookie-banner">
+        <div class="cookie-content">
+            <p>Este site usa cookies para garantir que você obtenha a melhor experiência. <a href="#">Saiba mais</a></p>
+        </div>
+        <button id="accept-cookies">Aceitar Cookies</button>
+    </div>
+
     <section id="hero" class="hero">
         <div class="hero__container">
             <h4>Olá, meu nome é</h4>
-            <h2>Jean Pablo Alves Gonçalves</h2>
+            <h2 id="typewriter">Jean Pablo Alves Gonçalves</h2>
             <h3>Eu sou um desenvolvedor JavaScript</h3>
             <p>Um ano de experiência no mercado.</p>
             <p>Podemos nos conhecer melhor?</p>
@@ -40,7 +47,15 @@
             <img src="https://via.placeholder.com/250" alt="Jean Pablo Alves Gonçalves">
         </div>
     </section>
-    
+
+    <section id="sobre" class="sobre">
+        <div class="sobre__container"></div>
+            <h2>Sobre mim</h2>
+            <p>Sou um desenvolvedor JavaScript com um passado profundo na área de front-end. Trabalho com React, Vue.js, Angular e outras bibliotecas JavaScript.</p>
+            <p>Meu foco é o desenvolvimento de interfaces modernas e responsivas, focando em usabilidade e performance.</p>
+            <p>Tenho uma boa experiência em escrever código limpo, testável e seguro.</p>
+        </div>
+    </section>
 
     <script src="/src/scripts/main.js"></script>
 </body>
