--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <section class="section" id="about">
       <h2 class="section-title">Sobre Mim</h2>
       <div class="about-me">
-        <div class="about-me-image" style="background-image: url('/img/perfil.jpg')"></div>
+        <div class="about-me-image"></div>
         <div>
           <h3 class="text-2xl font-bold mb-4">Meu nome é Jean Pablo Alves Gonçalves</h3>
           <p class="mb-4">Sou um desenvolvedor júnior apaixonado por aprender e crescer na área de desenvolvimento web. Tenho conhecimento básico em JavaScript, HTML e CSS, e estou sempre em busca de novas tecnologias para melhorar minhas habilidades.</p>
@@ -52,7 +52,7 @@
       <h2 class="section-title">Meus Serviços</h2>
       <div class="grid">
         <div class="card">
-          <div class="card-image" style="background-image: url('/img/web.webp')"></div>
+          <div class="card-image-s1"></div>
           <div class="card-content">
             <h4 class="text-xl font-bold mb-2">Desenvolvimento Web</h3>
             <p class="mb-4">Estou começando a desenvolver websites e aplicações simples, com foco em um bom design e experiência de usuário.</p>
@@ -60,7 +60,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="card-image" style="background-image: url('/img/javascript-backend.webp')"></div>
+          <div class="card-image-s2"></div>
           <div class="card-content">
             <h4 class="text-xl font-bold mb-2">Desenvolvimento Backend</h3>
             <p class="mb-4">Tenho conhecimento básico em backend, utilizando Node.js para criar APIs simples e integrações com bancos de dados.</p>
@@ -68,7 +68,7 @@
           </div>
         </div>
         <div class="card">
-          <div class="card-image" style="background-image: url('/img/consultoria.jpg')"></div>
+          <div class="card-image-s3"></div>
           <div class="card-content">
             <h4 class="text-xl font-bold mb-2">Consultoria</h3>
             <p class="mb-4">Ofereço consultoria inicial para empresas ou indivíduos que queiram começar a desenvolver suas soluções web.</p>
